# selenium_learn

./: .gitignore  BaseApp.py  README.md  conftest.py  pyproject.toml  test_input_text.py  test_main_page.py  test_product_page.py
pages/: ProductPage.py  base_page.py  locators.py  login_page.py  main_page.py  pytest.ini
test_tasks/: conftest.py  test_conftest.py
